--- a/art_node_api/public/index.html
+++ b/art_node_api/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
       <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Shrikhand" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
